--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,6 @@ job_environments:
   common_environment: &common_environment
     APP_HOSTPATH: taiwan
     CONTAINER_PREFIX: planet4-taiwan
-    WP_DB_NAME_PREFIX: planet4-taiwan_wordpress
   develop_environment: &develop_environment
     APP_ENVIRONMENT: development
     APP_HOSTNAME: k8s.p4.greenpeace.org
@@ -28,6 +27,7 @@ job_environments:
     GCLOUD_CLUSTER: planet4-production
     GOOGLE_PROJECT_ID: planet4-production
     HELM_NAMESPACE: taiwan
+    MAX_REPLICA_COUNT: 1
     HELM_RELEASE: planet4-taiwan-release
     NEWRELIC_APPNAME: P4 Taiwan Release
     WP_DB_NAME: planet4-taiwan_wordpress_release
@@ -39,7 +39,8 @@ job_environments:
     GOOGLE_PROJECT_ID: planet4-production
     HELM_NAMESPACE: taiwan
     HELM_RELEASE: planet4-taiwan-master
-    MIN_REPLICA_COUNT: 2
+    MIN_REPLICA_COUNT: 1
+    MAX_REPLICA_COUNT: 1
     NEWRELIC_APPNAME: P4 Taiwan Production
     WP_DB_NAME: planet4-taiwan_wordpress_master
     WP_STATELESS_BUCKET: planet4-taiwan-stateless
@@ -76,6 +77,30 @@ job_definitions:
           paths:
             - var
             - src
+
+  test_steps: &test_steps
+    working_directory: ~/project
+    docker:
+      - image: gcr.io/planet-4-151612/p4-codeception:develop
+      - name: selenium
+        image: selenium/standalone-chrome-debug:3
+    steps:
+      - checkout
+      - run: if [ ! -d "tests" ] || [ ! "$(ls -A tests)" ]; then circleci-agent step halt; fi
+      - run: dockerize -wait tcp://selenium:4444
+      - run: codeceptionify.sh .
+      - run: codecept run --xml=junit.xml --html
+      - run:
+          name: Copy test artifacts
+          when: always
+          command: |
+            mkdir -p /tmp/artifacts
+            cp -r codeception/_output/. /tmp/artifacts
+      - store_test_results:
+          path: /tmp/artifacts
+      - store_artifacts:
+          path: /tmp/artifacts
+
   prepare_release: &prepare_release
     working_directory: /tmp/workspace/src
     steps:
@@ -132,6 +157,7 @@ jobs:
       <<: *common_environment
       <<: *develop_environment
     <<: *build_steps
+
   prepare-release:
     <<: *defaults
     <<: *prepare_release
@@ -153,6 +179,7 @@ jobs:
   finish-release:
     <<: *defaults
     <<: *finish_release
+
   build-tag:
     <<: *defaults
     environment:
@@ -167,18 +194,32 @@ jobs:
       <<: *production_environment
     <<: *notify_hold
 
+  test-develop:
+    environment:
+      <<: *common_environment
+      <<: *develop_environment
+    <<: *test_steps
+
+  test-release:
+    environment:
+      <<: *common_environment
+      <<: *release_environment
+    <<: *test_steps
+
   deploy-develop:
     <<: *defaults
     environment:
       <<: *common_environment
       <<: *develop_environment
     <<: *deploy_steps
+
   deploy-release:
     <<: *defaults
     environment:
       <<: *common_environment
       <<: *release_environment
     <<: *deploy_steps
+
   deploy-tag:
     <<: *defaults
     environment:
@@ -186,11 +227,12 @@ jobs:
       <<: *production_environment
     <<: *deploy_steps
 
+
   create-sync-sql:
     <<: *defaults
     environment:
-      <<: *common_environment
-      <<: *production_environment
+       <<: *common_environment
+       <<: *production_environment
     working_directory: /tmp/workspace/src
     steps:
       - checkout
@@ -208,8 +250,8 @@ jobs:
   sync-sql-to-release:
     <<: *defaults
     environment:
-      <<: *common_environment
-      <<: *release_environment
+       <<: *common_environment
+       <<: *release_environment
     working_directory: /tmp/workspace/src
     steps:
       - checkout
@@ -225,8 +267,8 @@ jobs:
   sync-sql-to-develop:
     <<: *defaults
     environment:
-      <<: *common_environment
-      <<: *develop_environment
+       <<: *common_environment
+       <<: *develop_environment
     working_directory: /tmp/workspace/src
     steps:
       - checkout
@@ -238,7 +280,6 @@ jobs:
             ${HOME}/scripts/activate-gcloud-account.sh
       - run: echo $SQLPROXY_KEY | base64 -d > key.json
       - run: /home/circleci/sql_to_sync_site.sh develop
-
 
 workflow_definitions:
   develop_common: &develop_common
@@ -270,39 +311,47 @@ workflows:
   version: 2
   develop:
     jobs:
-      - build-branch:
-          <<: *develop_common
-      - deploy-develop:
-          <<: *develop_common
-          requires:
-            - build-branch
-      - prepare-release:
-          <<: *develop_common
-          requires:
-            - deploy-develop
+    - build-branch:
+        <<: *develop_common
+    - deploy-develop:
+        <<: *develop_common
+        requires:
+          - build-branch
+    - test-develop:
+        <<: *develop_common
+        requires:
+          - deploy-develop
+    - prepare-release:
+        <<: *develop_common
+        requires:
+          - deploy-develop
 
   release:
     jobs:
-      - build-release:
-          <<: *release_common
-      - deploy-release:
-          <<: *release_common
-          requires:
-            - build-release
-      - notify-promote:
-          <<: *release_common
-          requires:
-            - deploy-release
-      - hold-promote:
-          <<: *release_common
-          type: approval
-          requires:
-            - deploy-release
-      - finish-release:
-          <<: *release_common
-          requires:
-            - hold-promote
-            - notify-promote
+    - build-release:
+        <<: *release_common
+    - deploy-release:
+        <<: *release_common
+        requires:
+          - build-release
+    - test-release:
+        <<: *release_common
+        requires:
+          - deploy-release
+    - notify-promote:
+        <<: *release_common
+        requires:
+          - test-release
+    - hold-promote:
+        <<: *release_common
+        type: approval
+        requires:
+          - test-release
+    - finish-release:
+        <<: *release_common
+        requires:
+          - hold-promote
+          - notify-promote
   tag:
     jobs:
       - build-tag:
@@ -314,13 +363,13 @@ workflows:
 
   create-sync-sql:
     jobs:
-      - create-sync-sql:
-          <<: *sync_common
-      - sync-sql-to-release:
-          <<: *sync_common
-          requires:
-            - create-sync-sql
-      - sync-sql-to-develop:
-          <<: *sync_common
-          requires:
-            - sync-sql-to-release
+    - create-sync-sql:
+        <<: *sync_common
+    - sync-sql-to-release:
+        <<: *sync_common
+        requires:
+          - create-sync-sql
+    - sync-sql-to-develop:
+        <<: *sync_common
+        requires:
+          - sync-sql-to-release
