--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ docker_auth: &docker_auth
 
 defaults: &defaults
   docker:
-    - image: greenpeaceinternational/p4-builder:just-some-logging
+    - image: greenpeaceinternational/p4-builder:latest
       auth: &docker_auth
 
 orbs:
