--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ job_environments:
     CLOUDSQL_INSTANCE: planet4-prod
     GCLOUD_CLUSTER: planet4-production
     GOOGLE_PROJECT_ID: planet4-production
-    HELM_NAMESPACE: taiwan
+    HELM_NAMESPACE: taiwan-staging
     HELM_RELEASE: planet4-taiwan-release
     WP_DB_NAME: planet4-taiwan_wordpress_release
     WP_STATELESS_BUCKET: planet4-taiwan-stateless-release
